# todo-flask

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: admin.py  app.py  auth.py  commands.py  config.py  database.py  plugins.py  settings.toml  tasks.py  views.py
app/templates/: base.html.j2  form.html.j2  index.html.j2  task.html.j2
