[tool.poetry]
name = "todo-flask"
version = "0.1.0"
description = ""
authors = ["danalmeidap <dbatistadealmeida23@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
mistune = "^3.0.2"
flask-shell-ipython = "^0.5.1"
black = "^24.4.0"
flask-bootstrap = "^3.3.7.1"
dynaconf = "^3.2.5"
flask-admin = "^1.6.1"
flask-simplelogin = "^0.1.2"
flask-pymongo = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
